# Proj-4320

./: .gitignore  Makefile  README.md  app.h  ga.c  main.c  render.c  render.cu  run.sbatch  run.sh  sample.ppm  scaling_study.sh  util.c
.claude/: settings.local.json
config/: 100k.conf  default.conf  sing-gpu.conf  stagnation.conf  strong_scaling_1gpu.conf  strong_scaling_1n1g.conf  strong_scaling_1n2g.conf  strong_scaling_1n4g.conf  strong_scaling_1n6g.conf  strong_scaling_2gpu.conf  strong_scaling_2n6g.conf  strong_scaling_4gpu.conf  strong_scaling_4n6g.conf  strong_scaling_6gpu.conf  strong_scaling_8n6g.conf  weak_scaling_1gpu.conf  weak_scaling_1n1g.conf  weak_scaling_1n2g.conf  weak_scaling_1n4g.conf  weak_scaling_1n6g.conf  weak_scaling_2gpu.conf  weak_scaling_2n6g.conf  weak_scaling_4gpu.conf  weak_scaling_4n6g.conf  weak_scaling_6gpu.conf  weak_scaling_8n6g.conf
dual-annealing-master-fixed/: README.md
dual-annealing-master-fixed/examples/: tsallis.cpp
input/: strong_scaling.ppm  target.ppm  target_area_x1.ppm  target_area_x12.ppm  target_area_x2.ppm  target_area_x24.ppm  target_area_x32.ppm  target_area_x4.ppm  target_area_x6.ppm  target_area_x8.ppm
proj-c/: CHANGES.txt  CMakeLists.txt  Makefile  SPEEDUP.txt  final_result.ppm  ga.c  main.c  progress_GA_gen171000.ppm  render.c  render.cu  target.ppm  triangle_ga.h  util.c
proj-c/progress_ppm/: progress_GA_gen130000.ppm  progress_GA_gen140000.ppm
proj-py/: chunked_triangle_ga.py  triangle_ga.py
